[package]
name = "opentel_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
opentelemetry = "0.3"
opentelemetry_sdk = "0.3"
opentelemetry-otlp = "0.3"
tonic = "0.14"
futures = "0.3"
uuid = { version = "1.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.9"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.21"
wiremock = "0.6"
