[package]
name = "reporting-metrics-api"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19", features = ["v1_26"] }
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }

